gl33-master/src/test/deca/context/invalid/other/heritageMemeClasse.deca
// Test de contexte invalide : héritage de la même classe

class A{}

class B extends B{}
{
    B b = new B();
}
